--- a/README.org
+++ b/README.org
@@ -85,9 +85,7 @@ Note about cells with multiple entries: If a calendar cell has multiple entries,
 ELG aims to provide a flexible approach to customizing calendar displays. With some customization, this package is adaptable to different workflows. To that end, these macros are designed to facilitate customization of the calendar display. 
 *** The =elg-create-display-rule= macro
 This macro is used to customize the display of the calendar. It defines functions that are run at each cell after the calendar is generated. If a cell contains multiple entries, it will be run for each entry in the cell. 
-
-
-
+Before proceeding, here is a list of the properties that are included for each entry in the calendar:
 *** Accessing and adding properties
 **** The following properties are included in each cell by default:
 | Property                | Value                                                                                             |
@@ -107,20 +105,22 @@ This macro is used to customize the display of the calendar. It defines function
 | :elg-alltags            | A list of all tags, including inherited tags, associated with the heading                         |
 | :elg-header             | Header used for insertion into the calendar buffer. Depends on the value of =elg-header-type=       |
 | :elg-date               | Date used for insertion into the calendar. Uses the first date found in =elg-timestamps-to-display= |
-**** Adding properties
-The =:parser= argument is used to parse and add text properties to the calendar. 
-***** Examples
-****** Changing the color of certain cells
+**** Examples
+Here are some simple examples of how to use the macro. 
+***** Changing the color of certain cells
 Suppose we want to change the background color of any cell with a "TODO" state to red:
 #+begin_src emacs-lisp :results silent
   (elg-create-display-rule turn-todo-red
     :args (elg-todo) ;; Any argument in this list is available in the body
     :body ((when (string= "TODO" elg-todo)
              ;; `elg--create-overlay' is generally the easiest way to create an overlay
+             ;; since `ov' is not a dependency.
              (elg--create-overlay (point) (1+ (point))
                                   '(face (:background "red"))))))
 #+end_src
-Some caveats: If there is already an overlay on the cell, you have to manage the overlay priority. For example, here we will choose an arbitrarily large priority to make sure this overlay is displayed over any others:
+Some caveats: If there is already an overlay on the cell, you have to manage the overlay priorities for them to display properly. The manual is serious when it warns "you should not make assumptions about which overlay will prevail" when two overlays share the same (or no) priority. 
+
+For example, here we will choose an arbitrarily large priority to make sure this overlay is displayed over any others:
 #+begin_src emacs-lisp :results silent
   (elg-create-display-rule turn-todo-red
     :args (elg-todo) ;; Any argument listed here is available in the body
@@ -152,9 +152,8 @@ The =post-command-hook= keyword will add the function as a post-command-hook and
                                               :turn-it-red t))))))))
 #+end_src
 If, during your experimentation, you want to disable a display rule, add =:disable t= and it will be removed from the function stack (or the post-command hook, if appropriate). 
-
-****** Adding new properties from org files
-Suppose you want to change the color of a cell based on a property that is not present by default. For example, you want to change the color if the cell has a certain priority, but that property is not included by default. In that case, use the =:parser= keyword to add a property. The expression is run at the first point of each org heading. The syntax is:
+***** Adding new properties from org files
+Suppose you want to change the color of a cell based on a property that is not present by default. For example, you want to change the color if the cell has a certain priority, but that property is not included by default. In that case, use the =:parser= keyword to add a property. The expression is run at the first point of each org heading, and will be automatically added to the parsing function. The syntax is:
 #+begin_src emacs-lisp :results silent
   :parser ((property-name1 . ((expression)))
            (property-name2 . ((expression))))
@@ -162,14 +161,15 @@ Suppose you want to change the color of a cell based on a property that is not p
 So, to add the property to get the priority of an org heading:
 #+begin_src emacs-lisp :results silent
     (elg-create-display-rule priority-display
-      :parser ((elg-priority . ((org-entry-get (point) "PRIORITY")))))
-      ;; Include other code here.
+      :parser ((elg-priority . ((org-entry-get (point) "PRIORITY"))))
+      :body (())) ;; insert code here, which can use elg-priority variable
 #+end_src
-Then, reload the calendar and =:elg-priority= will be added to each cell's text properties. 
-****** Example: the display-char function
+You must reload the calendar after evaluating the macro so the calendar can repopulate and =:elg-priority=
+and its value will be added to each cell's text properties. 
+***** Example: the display-char function
 You may be thinking, okay, I get it, but how about a useful example? Turning matching todos red doesn't come close to functionality I can use. 
 
-Point taken. This is the function that is run to determine what character should be displayed at each cell. (It is disabled for reasons beyond the scope of this discussion.) 
+This is the function that is run to determine what character should be displayed at each cell. (It is disabled for reasons beyond the scope of this discussion.) 
 #+begin_src emacs-lisp :results silent
 (elg-create-display-rule display-char
   :docstring "Display the appropriate character in each cell."
@@ -192,7 +192,7 @@ Point taken. This is the function that is run to determine what character should
 				     ;; There shouldn't be anything left over
 				     (t (error "Unrecognized date type.")))))))
 #+end_src
-****** Another example
+***** Another example
 Here is how I colorize blocks of time. It depends on two org properties: =ELG-COLOR= and =ELG-LINKED-TO=. =ELG-COLOR= is an org property that contains two color names, which will represent the start and end of a gradient. =ELG-LINKED-TO= contains the ID of an org heading. 
 #+begin_src emacs-lisp :results silent
   (setq elg-user-set-color-priority-counter 0) ;; There must be a counter to ensure that overlapping overlays are handled properly
@@ -204,7 +204,11 @@ Here is how I colorize blocks of time. It depends on two org properties: =ELG-CO
     :body ((when elg-linked-to
              (save-excursion
                (when-let ((point1 (point))
-                          (point2 (let (date)
+                          (point2 (let (date) 
+                          ;; Cells can be linked even if they are not 
+                          ;; in the same header in the calendar. Therefore, 
+                          ;; we have to get the date of the linked cell, and then
+                          ;; move to that date in the current header
                                     (save-excursion (elg--goto-id elg-linked-to)
                                                     (setq date (elg-get-date-at-point)))
                                     (elg--goto-date date)
@@ -215,46 +219,89 @@ Here is how I colorize blocks of time. It depends on two org properties: =ELG-CO
                    (elg--draw-gradient 
                     color1
                     color2
-                    (if (< point1 point2) point1 point2)
-                    (if (< point1 point2) point2 point1)
+                    (if (< point1 point2) point1 point2) ;; Since cells are not necessarily linked in 
+                    (if (< point1 point2) point2 point1) ;; chronological order, make sure they are sorted
                     nil
                     `(priority ,(setq elg-user-set-color-priority-counter
                                       (1- elg-user-set-color-priority-counter))
                                :elg-user-overlay ,elg-org-id))))))))
 #+end_src
 **** Iteracting with the calendar 
-There are two ways to interact with the calender: the command macro and the separate module, =elg-interaction=.
-**** Commands macro
-***** Example: marking a tast as done 
+There are two ways to interact with the calender: the =elg-create-action=  macro and the separate module, =elg-interaction=.
+***** =elg-create-action=
+This macro works the same way as =elg-create-display-rule= except that has keywords for binding
+commands. I don't use this macro for anything. 
+***** =elg-interaction=
+This module experimental. The code is not cleaned up. It was written in a frenzy of wondering whether I could without considering whether I should. If this inspires ideas for others to use it, I will return to it. Otherwise, unless I have a need, I plan to abandon it. 
+
+Here is an example I use to set the =:ELG-LINKED-TO= and =:ELG-COLOR= property used in the example above. In short, it is designed to allow the user to select cells and perform actions on them in a certain sequence. Here, it allows the user to make two selections, and when return is pressed, it will prompted the user to enter two colors, and then set the properties of the relevant org heading. 
+
+While this example works, the code in =elg-interaction= is generally untested. I do not know whether I will develop it further absent a need to do so. The framework should provide a robust way to interact with the calendar and perform actions on multiple org entries. 
+
+To invoke the interface, press =a= to be prompted to select which interface you'd like to execute. After that, a counter should appear which shows the number of cells selected. The message displayed is defined by the =:selection-messages= keyword. Once the cells are selected (by pressing =space=), the user presses =Return= to execute the command. The execution functions will be run in the order listed in =:execution-functions=. The first number refers to cells in the order in which they were selected. The variable =return-val= is the return value of the previous function. 
+
+So, here, the user selects two cells and presses return. Then, the program moves to the second selected cell, and runs =org-id-get-create=, and returns the value. The section function moves to the first cell that the user selected, and adds the ID of the second selection (i.e., =return-val=), and then prompts the user for two colors and sets the properties of that heading appropriatly. 
+
+In addition to being able to use numbers to refer to cells by the order in which they were selected, you can use =all=, =rest=, =all-but-last=, and =last= to refer to the cells and perform operations on them.
+#+begin_src emacs-lisp :results silent
+  (elg--selection-rule
+   :name colorize
+   :selection-number 2)
+   :selection-messages ((1 . "Select first cell")
+                        (2 . "Select second cell"))
+   :execution-functions ((2 . ((elg-with-point-at-orig-entry nil
+                                   (org-id-get-create))))
+                         (1 . ((elg-with-point-at-orig-entry nil
+                                   (org-set-property "ELG-LINKED-TO" return-val)
+                                 (org-set-property "ELG-COLOR" (concat (s-trim (helm-colors))
+                                                                       " "
+                                                                       (s-trim (helm-colors))))))))
+#+end_src
+Here is a second example I played with previously, which provided a more advanced way to link cells/headings together
+#+begin_src emacs-lisp :results silent
+(elg--selection-rule :name set-anchor
+		     :parser ((:elg-dependents . ((when-let ((dependents (cdar (org-entry-properties (point)
+												     "ELG-DEPENDENTS"))))
+						    (s-split " " dependents)))))
+		     :execution-functions ((2 . ((elg:with-point-at-orig-entry nil
+									       (org-id-get-create))))
+					   (1 . ((elg:with-point-at-orig-entry nil
+									       (let ((current-heading-id (org-id-get-create)))
+										 (org-set-property "ELG-DEPENDENTS"
+												   (format "%s"
+													   (substring 
+													    (if (member return-val elg-dependents)
+														elg-dependents
+													      (push return-val elg-dependents))
+													    1 -1)))))))
+					   (2 . ((elg:with-point-at-orig-entry nil
+									       (org-set-property "ELG-ANCHOR" return-val)))))
+		     :selection-messages ((1 . "Select the anchor.")
+					  (rest . "Select the dependents."))
+		     :selection-number 0)
+#+end_src
+This was previously accompanied by code that allowed the user to move the date of dependent cells by moving the anchor cell, and which highlighted all dependent cells when the point was on an anchor. I abandoned this for various reasons. Again, if there is interest in this level of interface I can clean it up and get it working. Otherwise, whatever. 
 *** Helper functions
 The following functions are included to ease customization:
 **** Drawing the display
-***** Creating overlays
-***** Creating gradients
-***** Creating progress bars
+Create overlays with =elg--create-overlay=
+Draw gradients with =elg--draw-gradient=
+Draw a progress bar with =elg--draw-progress-bar=
 **** Navigating the buffer
-***** elg-goto-id
-***** elg-goto-date
-***** moving forward/backward
+Move to a cell by org-id with =elg--goto-id=
+Move to a date on the current line with =elg--goto-date=
 **** Selecting from multiple entries
+Since some cells have multiple entries, you may need to prompt the user to pick which one should be used: =elg--select-entry=
 **** Getting calendar data 
-***** elg-get-date-at-point
-***** elg-get-prop-at-point
+To get the date at point: =elg-get-date-at-point=
+To get the properties of a cell: =elg-get-prop-at-point=
 **** Editing the underlying org file
-Use the macro stolen from org-mode: =elg-with-point-at-orig-entry=
+Use the macro =elg-with-point-at-orig-entry= to execute code at the underlying org heading. 
 **** Redrawing 
-***** Reloading the date at point
-***** Reloading the entire buffer
-***** Reloading displays
-**** Miscellaneous utilities
-***** Date calculator
-** Experimental - Interaction macro 
-** Example set up
-#+begin_src emacs-lisp :results silent
+You can't reload a single cell because doing so invites catastrophe. But you can update all cells for the date at point: =elg-update-this-cell=
+The display (i.e., overlays) of a single cell can be redrawn with =elg--update-display-this-cell= or all cells with =elg--update-display-all-cells=. 
+If all else fails, reload everything with =elg-open=.
 
-#+end_src
 
-** TODOs 
-*** TODO Remove =ts.el= dependency, as it is used more for convenience than anything. 
-*** 
+
 
